force-app/main/default/objects/PermissionSetAssigment__mdt/PermissionSetAssigment__mdt.object-meta.xml
<CustomObject>
    <label>Permission set assigment</label>
    <pluralLabel>Permission set assigments</pluralLabel>
</CustomObject>