force-app/main/default/objects/PermissionSetAssigment__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <referenceTo>Field__mdt</referenceTo>
    <relationshipName>PermissionsetUserAssignments</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>