force-app/main/default/objects/PermissionSetAssigment__mdt/fields/PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>PermissionSet__c</fullName>
    <label>PermissionSet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>